# cmake_add_outOfTree_dirs

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
common/utils/: CMakeLists.txt  sum.cpp
target_device/full_variant/: CMakeLists.txt  CMakeSettings.json  main.cpp
